--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ title: Arcane Reveries
 #   line in _config.yml. It will appear in your document head meta (for
 #   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://localhost:4000" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://manikantareddyd.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 description: "This is about Mani, a developer, a curious mind and an amateur astronomer. I heard that you wanted to know me, so here you go."
 # twitter_username: jekyllrb
 
