--- a/_config.yml
+++ b/_config.yml
@@ -60,7 +60,7 @@ analytics:
 bing:
     validate: "10805F027940A5586DCE409A0027B30F"
 
-disqus_shortname:   manikantadreddy
+disqus_shortname:   manikantareddyd
 
 fbcomments: 1
 fb_appid: 1166944040038372
